fix footer spacing

--- a/frontend/src/stylesheets/components/_calendar.scss
+++ b/frontend/src/stylesheets/components/_calendar.scss
@@ -1,3 +1,11 @@
+.calendar {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .calendar-header {
     display: flex;
     align-items: center;
