--- a/frontend/src/stylesheets/layout/_container.scss
+++ b/frontend/src/stylesheets/layout/_container.scss
@@ -1,8 +1,12 @@
 #rootContainer {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .baseContainer {
+    flex: 1;
     margin: 0 auto;
     width: 1200px;
     min-height: 300px;
